# SysAdminGame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SysAdminGame  cmake_install.cmake  imgui.ini  run.sh  setup_project.sh
.cache/clangd/index/: glad.c.2AFB52F3B17355D0.idx  glad.h.50EEB54E6839C187.idx  khrplatform.h.324812C7B3CECF60.idx  main.cpp.17D7220BD53EB9A9.idx  shader_s.h.E0831F4063DFDCDF.idx  stb_image.h.28AD7C92B7E0FB88.idx
includes/: shader_s.h  shader_s.hpp  stb_image.h
includes/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: glad.c  main.cpp
